[gd_scene load_steps=5 format=3 uid="uid://dwtf4melvcicc"]

[ext_resource type="Script" path="res://menu.gd" id="1_ui2tx"]
[ext_resource type="Texture2D" uid="uid://b45xo011fnjvb" path="res://rage mobs/field2.jpg" id="2_4qna8"]
[ext_resource type="FontFile" uid="uid://cit6txu4dyasp" path="res://prstart.ttf" id="2_y1l5l"]
[ext_resource type="AudioStream" uid="uid://b502xf05vwsbv" path="res://Legal Woes (1).mp3" id="4_xuyce"]

[node name="menu" type="Node2D"]
script = ExtResource("1_ui2tx")

[node name="Field2" type="Sprite2D" parent="."]
position = Vector2(576.222, 324)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_4qna8")

[node name="start" type="Button" parent="."]
offset_left = 445.0
offset_top = 314.0
offset_right = 581.0
offset_bottom = 338.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_y1l5l")
text = " start! "

[node name="info" type="Button" parent="."]
offset_left = 445.0
offset_top = 375.0
offset_right = 581.0
offset_bottom = 399.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_y1l5l")
text = "  info  "

[node name="stages" type="Button" parent="."]
offset_left = 445.0
offset_top = 435.0
offset_right = 581.0
offset_bottom = 459.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_y1l5l")
text = " stages "

[node name="quit" type="Button" parent="."]
offset_left = 445.0
offset_top = 495.0
offset_right = 581.0
offset_bottom = 519.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("2_y1l5l")
text = "  quit  "

[node name="music1" type="AudioStreamPlayer2D" parent="." groups=["music"]]
stream = ExtResource("4_xuyce")
volume_db = -10.143
autoplay = true

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="stages" to="." method="_on_stages_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
